tests/negative/gold/default-values4-test.gold
tests/negative/default-values4-test.toit:6:8: error: Unexpected token: +
foo x=5+3:
       ^
Compilation failed
